--- a/SMCroco/Base.lproj/LaunchScreen.storyboard
+++ b/SMCroco/Base.lproj/LaunchScreen.storyboard
@@ -30,8 +30,8 @@
                                 <color key="textColor" name="1"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="by Team 2 of SM 7.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jzs-Db-PUG">
-                                <rect key="frame" x="109.66666666666669" y="725" width="195" height="27"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="by Team 12 of SM 7.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jzs-Db-PUG">
+                                <rect key="frame" x="103" y="725" width="208" height="27"/>
                                 <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="24"/>
                                 <color key="textColor" name="3"/>
                                 <nil key="highlightedColor"/>
